--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>AI聊天助手</title>
- <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI 对话界面</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/KaTeX/0.16.9/katex.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
- <div class="chat-container" id="chatContainer" style="padding: 20px 0;">
-  <div class="message bot-message">您好！随时为您效劳</div>
- </div>
- <div class="loading" id="loading">思考中</div>
- <div class="error" id="error"></div>
- <div class="input-area">
-  <div class="input-group">
-   <input type="text" id="messageInput" placeholder="输入消息..." autocomplete="off" autofocus>
-   <button id="sendButton" onclick="sendMessage()">发送</button>
-  </div>
- </div>
- <script type="text/javascript" src="script.js"></script>
-</body>
+    <div id="chatContainer" class="chat-container"></div>
 
+    <div class="input-area">
+        <div class="input-group">
+            <input type="text" id="messageInput" placeholder="发送消息">
+            <button id="sendButton">发送</button>
+        </div>
+    </div>
+
+    <div id="loading" class="loading">思考中...</div>
+    <div id="error" class="error"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/5.1.1/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/KaTeX/0.16.9/katex.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
