--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>AI对话助手</title>
     <script src="https://cdn.mengze.vip/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdn.mengze.vip/npm/katex@0.16.9/dist/katex.min.css">
