refactor: 修改网站标题为 AI对话

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI对话助手</title>
+    <title>AI对话</title>
     <link rel="icon" href="./style/favicon.ico" type="image/x-icon">
     <script src="https://cdn.mengze.vip/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdn.mengze.vip/npm/katex@0.16.9/dist/katex.min.css">
