--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>AI 助手配置</h2>
             
             <div class="config-group">
-                <label for="apiKey">API Key</label>
+                <label for="apiKey">API Key<a href="https://cloud.siliconflow.cn/i/DGvm1ov3">新用户注册送14元余额</a></label>
                 <input type="text" name="username" autocomplete="username" style="display:none">
                 <input type="password" id="apiKey" placeholder="输入API Key">
             </div>
